[gd_scene load_steps=4 format=3 uid="uid://quto5r2t1ldo"]

[ext_resource type="Script" path="res://Bubble.gd" id="1_tbuns"]
[ext_resource type="Resource" uid="uid://cmdje1am1ftrr" path="res://Resource/Attacks/WaterBubble.tres" id="2_s7tu5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i7mp8"]
size = Vector2(72, 68)

[node name="Node2D" type="Area2D"]
position = Vector2(584, 289)
collision_layer = 7
collision_mask = 7
script = ExtResource("1_tbuns")
attack = ExtResource("2_s7tu5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_i7mp8")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
